--- a/src/Card.css
+++ b/src/Card.css
@@ -21,32 +21,29 @@
   }
   
   .cards{
-    width: 50px;
-    height:50px ;
-    background-color: #fff;
+    
     border-radius: 30px;
     
   }
   
   
   .card {
-    margin: 6%;
+    margin: auto;
+    padding: 30px;
+    box-shadow: 10px 23px 20px 7px rgba(184, 12, 12, 0.1);
     
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1);
     background-color: #fff;
     width: 500px;
-    height:700px ;
+    height:850px ;
     /* border-radius: 12px; */
-    box-shadow: 0px 13px 10px -7px rgba(0,0,0,0.1);
+   
     /* float: left; */
     /* display: flex; */
     
     border-radius: 30px;
   }
-  .card:hover{
-    box-shadow: 10px 23px 20px 7px rgba(184, 12, 12, 0.1);
-    transform: scale(1.05,1.05);
-  }
+  
   .card_img{
     width: 300px;
     height: 250px;
@@ -56,40 +53,8 @@
     font-size: 20px;
   }
   
-  /* .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
   
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  } */
+
 
 
   .search {
@@ -136,21 +101,61 @@
 }
 .lgbutton
 {
-  display: block;
-  width: 40%;
+  display: flex;
+  /* width: 40%; */
   border: none;
-  background-color: #04AA6D;
+  background-color: #050807;
   color: white;
-  padding: 20px 15px;
+  /* padding: 20px 15px; */
   font-size: 16px;
   cursor: pointer;
   text-align: center;
   border-radius: 50px;
+  padding: 10px 70px 10px 70px;
+  margin: 10px;
 }
 
 .btnn {
   display: flex;
   list-style-type: none;
-  justify-content: center;
-  margin: 0;
+  margin: auto;
+}
+
+
+
+
+
+.radio-toolbar {
+  margin: 10px;
+  
+}
+
+.radio-toolbar input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-toolbar label {
+    display: inline-block;
+    background-color: #ddd;
+    padding: 8px 12px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 2px solid #444;
+    border-radius: 25px;
+    margin:5px;
+}
+
+.radio-toolbar label:hover {
+  background-color: #dfd;
+}
+
+.radio-toolbar input[type="radio"]:focus + label {
+    border: 2px dashed #444;
+}
+
+.radio-toolbar input[type="radio"]:checked + label {
+    background-color: hsl(61, 92%, 59%);
+    border-color: hsl(57, 63%, 6%);
 }
