--- a/src/Card.css
+++ b/src/Card.css
@@ -3,11 +3,13 @@
 *{
     box-sizing:border-box;
     padding:0;
-    /* margin:0; */
-    /* background-color:#d2dbdd; */
-  }
+     }
   
-  .heading_style{
+
+h1, h2, p, ul, li {
+    font-family: sans-serif;
+  }
+.heading_style{
     padding: 30px 0;
     text-align: center;
     font-family: "raleway",sans-serif;
@@ -15,19 +17,16 @@
     font-size: 13px;
     letter-spacing: 2px;
     font-weight:500;
-    /* color: #868686; */
     background-color: #fff;
     margin-bottom: 30px;
   }
   
-  .cards{
-    
-    border-radius: 30px;
+.cards{
+   border-radius: 30px;
     
   }
   
-  
-  .card {
+.card {
     margin: auto;
     padding: 30px;
     box-shadow: 10px 23px 20px 7px rgba(184, 12, 12, 0.1);
@@ -35,29 +34,19 @@
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1);
     background-color: #fff;
     width: 500px;
-    height:850px ;
-    /* border-radius: 12px; */
-   
-    /* float: left; */
-    /* display: flex; */
-    
+    height:auto ;
     border-radius: 30px;
   }
   
-  .card_img{
+.card_img{
     width: 300px;
     height: 250px;
   }
-  .card_category
-  {
+.card_category{
     font-size: 20px;
   }
   
-  
-
-
-
-  .search {
+.search {
     padding: 0 30px;
       margin:  20px 20px 20px 0px;
     font-size: 18px;
@@ -67,13 +56,12 @@
     border: 1px solid darken(rgb(244, 237, 237), 30%);
     border-radius: 20px;
   }
-  .Paragraph
-  {
+.Paragraph{
       float: right;
       margin: 0px;
-      
-  }
-  .header1 {
+      }
+
+.header1 {
       background-color: #d2dbdd ;
       color: black;
       padding: 10px;
@@ -81,9 +69,9 @@
       margin: 15px;
       height: 20px;
       border: 1px solid darken(rgb(244, 237, 237), 30%);
-  }
+    }
 
-  .headeryello {
+.headeryello {
     background-color: #f6d029 ;
     color: black;
     padding: 10px;
@@ -91,28 +79,24 @@
     margin: 15px;
     height: 20px;
     border: 1px solid darken(rgb(244, 237, 237), 30%);
-}
+  }
   
+.Paragraph{
+  font-size: 12px;
+  margin: 0px;
+ }
 
-  .Paragraph
-{
-    
-    margin: 0px;
-}
-.lgbutton
-{
+.lgbutton{
   display: flex;
-  /* width: 40%; */
   border: none;
   background-color: #050807;
   color: white;
-  /* padding: 20px 15px; */
   font-size: 16px;
   cursor: pointer;
   text-align: center;
   border-radius: 50px;
   padding: 10px 70px 10px 70px;
-  margin: 10px;
+  margin: 14px;
 }
 
 .btnn {
@@ -120,10 +104,6 @@
   list-style-type: none;
   margin: auto;
 }
-
-
-
-
 
 .radio-toolbar {
   margin: 10px;
@@ -137,18 +117,18 @@
 }
 
 .radio-toolbar label {
-    display: inline-block;
-    background-color: #ddd;
-    padding: 8px 12px;
-    font-family: sans-serif, Arial;
-    font-size: 16px;
-    border: 2px solid #444;
-    border-radius: 25px;
-    margin:5px;
+  display: inline-block;
+  background-color: #ddd;
+  padding: 8px 12px;
+  font-family: sans-serif, Arial;
+  font-size: 16px;
+  border: 2px solid #444;
+  border-radius: 25px;
+  margin:5px;
 }
 
 .radio-toolbar label:hover {
-  background-color: #dfd;
+  background-color: rgb(246, 215, 39);
 }
 
 .radio-toolbar input[type="radio"]:focus + label {
@@ -156,6 +136,29 @@
 }
 
 .radio-toolbar input[type="radio"]:checked + label {
-    background-color: hsl(61, 92%, 59%);
-    border-color: hsl(57, 63%, 6%);
+  background-color: hsl(61, 92%, 59%);
+  border-color: hsl(57, 63%, 6%);
 }
+.details
+{
+  padding-bottom: 6px;
+  margin-bottom: 1px;
+  color: #444;
+}
+
+.Apply{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 900;
+}
+
+.hideShow{
+  display: flex;
+  justify-content: end;
+  padding: 15px;
+  border: #ffffff;
+  background-color: #ffffff;
+  margin: auto;
+  font-weight: 600;
+  font-size: 15px;
+  }
