--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   background-color: #f8fcf7;
   padding: 20px;
   margin: 0px;  
@@ -43,4 +43,4 @@ label.search {
 	height: 80px;
 	border: 1px solid darken(white, 30%);
 	border-radius: 20px 0 0 20px;
-} */
+}
