--- a/src/Card.css
+++ b/src/Card.css
@@ -1,5 +1,3 @@
-
-
 *{
     box-sizing:border-box;
     padding:0;
@@ -10,16 +8,16 @@ h1, h2, p, ul, li {
     font-family: sans-serif;
   }
 .heading_style{
-    padding: 30px 0;
-    text-align: center;
-    font-family: "raleway",sans-serif;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 2px;
-    font-weight:500;
-    background-color: #fff;
-    margin-bottom: 30px;
-  }
+  padding: 30px 0;
+  text-align: center;
+  font-family: "raleway",sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight:500;
+  background-color: #fff;
+  margin-bottom: 30px;
+}
   
 .cards{
    border-radius: 30px;
@@ -27,16 +25,16 @@ h1, h2, p, ul, li {
   }
   
 .card {
-    margin: auto;
-    padding: 30px;
-    box-shadow: 10px 23px 20px 7px rgba(184, 12, 12, 0.1);
-    
-    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1);
-    background-color: #fff;
-    width: 500px;
-    height:auto ;
-    border-radius: 30px;
-  }
+  margin: auto;
+  padding: 30px;
+  box-shadow: 10px 23px 20px 7px rgba(184, 12, 12, 0.1);
+  
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1);
+  background-color: #fff;
+  width: 500px;
+  height:auto ;
+  border-radius: 30px;
+}
   
 .card_img{
     width: 300px;
@@ -47,39 +45,30 @@ h1, h2, p, ul, li {
   }
   
 .search {
-    padding: 0 30px;
-      margin:  20px 20px 20px 0px;
-    font-size: 18px;
-    width: 100%;
-    max-width: 450px;
-    height: 60px;
-    border: 1px solid darken(rgb(244, 237, 237), 30%);
-    border-radius: 20px;
-  }
+  padding: 0 30px;
+  margin:  20px 20px 8px 0px;
+  font-size: 18px;
+  width: 100%;
+  max-width: 450px;
+  height: 60px;
+  border: 1px solid darken(rgb(244, 237, 237), 30%);
+  border-radius: 20px;
+}
 .Paragraph{
-      float: right;
-      margin: 0px;
-      }
+  float: right;
+  padding-bottom: 2px;
+  margin: 15px;
+  }
 
 .header1 {
-      background-color: #d2dbdd ;
-      color: black;
-      padding: 10px;
-      border-radius: 50px;
-      margin: 15px;
-      height: 20px;
-      border: 1px solid darken(rgb(244, 237, 237), 30%);
-    }
-
-.headeryello {
-    background-color: #f6d029 ;
-    color: black;
-    padding: 10px;
-    border-radius: 50px;
-    margin: 15px;
-    height: 20px;
-    border: 1px solid darken(rgb(244, 237, 237), 30%);
-  }
+  background-color: #d2dbdd ;
+  color: black;
+  padding: 10px;
+  border-radius: 50px;
+  margin: 15px;
+  height: 20px;
+  border: 1px solid darken(rgb(244, 237, 237), 30%);
+}
   
 .Paragraph{
   font-size: 12px;
@@ -95,8 +84,8 @@ h1, h2, p, ul, li {
   cursor: pointer;
   text-align: center;
   border-radius: 50px;
-  padding: 10px 70px 10px 70px;
-  margin: 14px;
+  padding: 12px 70px 12px 70px;
+  margin: 20px;
 }
 
 .btnn {
@@ -121,8 +110,8 @@ h1, h2, p, ul, li {
   background-color: #ddd;
   padding: 8px 12px;
   font-family: sans-serif, Arial;
-  font-size: 16px;
-  border: 2px solid #444;
+  font-size: 14px;
+  /* border: 2px solid #444; */
   border-radius: 25px;
   margin:5px;
 }
@@ -161,3 +150,39 @@ h1, h2, p, ul, li {
   font-weight: 600;
   font-size: 15px;
   }
+ 
+
+ .balancetool {
+  margin: 10px;
+  
+}
+
+.balancetool input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.balancetool label {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 8px 12px;
+  font-family: sans-serif, Arial;
+  font-size: 14px;
+  /* border: 2px solid #444; */
+  border-radius: 10px;
+  margin:5px;
+}
+
+.balancetool label:hover {
+  background-color: rgb(246, 215, 39);
+}
+
+.balancetool input[type="radio"]:focus + label {
+    border: 2px dashed #444;
+}
+
+.balancetool input[type="radio"]:checked + label {
+  background-color: hsl(61, 92%, 59%);
+  border-color: hsl(57, 63%, 6%);
+}
