--- a/src/ToggleSwitch.css
+++ b/src/ToggleSwitch.css
@@ -1,6 +1,8 @@
 .container {
-    /* text-align: center; */
-    float: right;
+  float: right;
+  
+    /* display: flex;
+  justify-content: flex-end; */
   }
   .toggle-switch {
     position: relative;
